chore: improve service layer and API validation